--- a/Página-Inicial.css
+++ b/Página-Inicial.css
@@ -605,598 +605,191 @@
 }
 
 .u-section-4 .u-text-1 {
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  font-weight: 400;
-  margin: 56px 84px 0 843px;
+  width: 740px;
+  margin: 85px auto 0;
 }
 
 .u-section-4 .u-text-2 {
-  width: 740px;
-  margin: 4px auto 0;
-}
-
-.u-section-4 .u-text-3 {
   font-weight: 700;
   margin: -78px auto 0;
 }
 
 .u-section-4 .u-layout-wrap-1 {
-  width: 1140px;
-  margin: 70px 0 60px;
+  margin-top: 70px;
+  margin-bottom: 0;
 }
 
 .u-section-4 .u-layout-cell-1 {
-  min-height: 466px;
-  background-image: none;
+  min-height: 933px;
 }
 
 .u-section-4 .u-container-layout-1 {
-  padding: 30px;
+  padding: 30px 15px;
 }
 
-.u-section-4 .u-text-4 {
+.u-section-4 .u-text-3 {
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 2px;
-  margin: 0 auto;
+  font-size: 1.875rem;
+  margin: 0 6px 0 0;
 }
 
-.u-section-4 .u-text-5 {
+.u-section-4 .u-text-4 {
   font-size: 3.75rem;
   font-weight: 700;
   margin: 8px auto 0;
-}
-
-.u-section-4 .u-text-6 {
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  width: 168px;
-  font-weight: 400;
-  margin: -4px auto 0;
 }
 
 .u-section-4 .u-line-1 {
   width: 228px;
-  margin: 21px auto 0;
+  margin: 22px auto 0;
 }
 
-.u-section-4 .u-text-7 {
+.u-section-4 .u-text-5 {
   line-height: 2;
   letter-spacing: 1px;
   width: 206px;
-  margin: 19px auto 0;
+  margin: 12px auto 0;
 }
 
 .u-section-4 .u-btn-1 {
-  background-image: none;
-  border-style: none;
-  text-transform: uppercase;
   font-size: 1rem;
   letter-spacing: 1px;
+  border-style: none;
   font-weight: 800;
-  margin: 32px auto 0;
+  text-transform: uppercase;
+  margin: 25px auto 0;
   padding: 12px 42px 13px 41px;
 }
 
 .u-section-4 .u-layout-cell-2 {
-  min-height: 466px;
-  background-image: none;
+  min-height: 892px;
 }
 
 .u-section-4 .u-container-layout-2 {
-  padding: 30px;
+  padding: 15px;
 }
 
-.u-section-4 .u-text-8 {
+.u-section-4 .u-text-6 {
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 2px;
-  margin: 0 auto;
+  font-size: 1.875rem;
+  margin: 9px auto 0;
 }
 
-.u-section-4 .u-text-9 {
+.u-section-4 .u-text-7 {
   font-size: 3.75rem;
   font-weight: 700;
-  margin: 8px auto 0;
-}
-
-.u-section-4 .u-text-10 {
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  width: 168px;
-  font-weight: 400;
-  margin: -4px auto 0;
+  margin: 20px auto 0;
 }
 
 .u-section-4 .u-line-2 {
   width: 228px;
-  margin: 21px auto 0;
+  margin: 16px auto 0;
 }
 
-.u-section-4 .u-text-11 {
+.u-section-4 .u-text-8 {
   line-height: 2;
   letter-spacing: 1px;
   width: 206px;
-  margin: 19px auto 0;
+  margin: 12px auto 0;
 }
 
 .u-section-4 .u-btn-2 {
-  background-image: none;
   border-style: none;
-  text-transform: uppercase;
   font-size: 1rem;
   letter-spacing: 1px;
   font-weight: 800;
-  margin: 32px auto 0;
+  text-transform: uppercase;
+  margin: 25px auto 0;
   padding: 12px 42px 13px 41px;
 }
 
-.u-section-4 .u-layout-cell-3 {
-  background-image: linear-gradient(#8a4ff2, #478ac9);
-  min-height: 954px;
-}
-
-.u-section-4 .u-container-layout-3 {
-  padding: 0;
-}
-
-.u-section-4 .u-text-12 {
+.u-section-4 .u-text-9 {
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 2px;
-  margin: 21px auto 0;
-}
-
-.u-section-4 .u-text-13 {
-  font-size: 3.75rem;
-  font-weight: 700;
-  margin: 8px auto 0;
-}
-
-.u-section-4 .u-text-14 {
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  font-weight: 400;
-  margin: 0;
-}
-
-.u-section-4 .u-line-3 {
-  width: 228px;
-  margin: 22px auto 0;
-}
-
-.u-section-4 .u-text-15 {
-  line-height: 2;
-  letter-spacing: 1px;
-  width: 206px;
-  margin: 18px auto 0;
-}
-
-.u-section-4 .u-btn-3 {
-  background-image: none;
-  border-style: none;
-  text-transform: uppercase;
-  font-size: 1rem;
-  letter-spacing: 1px;
-  font-weight: 800;
-  margin: 34px 52px 0 auto;
-  padding: 12px 42px 13px 41px;
-}
-
-.u-section-4 .u-layout-cell-4 {
-  min-height: 954px;
-  background-image: none;
-}
-
-.u-section-4 .u-container-layout-4 {
-  padding: 30px;
-}
-
-.u-section-4 .u-text-16 {
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  margin: 0 auto;
-}
-
-.u-section-4 .u-text-17 {
-  font-size: 3.75rem;
-  font-weight: 700;
-  margin: 8px auto 0;
-}
-
-.u-section-4 .u-text-18 {
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  width: 168px;
-  font-weight: 400;
-  margin: -4px auto 0;
-}
-
-.u-section-4 .u-line-4 {
-  width: 228px;
-  margin: 21px auto 0;
-}
-
-.u-section-4 .u-text-19 {
-  line-height: 2;
-  letter-spacing: 1px;
-  width: 206px;
-  margin: 19px auto 0;
-}
-
-.u-section-4 .u-btn-4 {
-  background-image: none;
-  border-style: none;
-  text-transform: uppercase;
-  font-size: 1rem;
-  letter-spacing: 1px;
-  font-weight: 800;
-  margin: 32px auto 0;
-  padding: 12px 42px 13px 41px;
+  margin: 108px auto 0;
 }
 
 @media (max-width: 1199px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 1010px;
+    min-height: 1013px;
   }
 
-  .u-section-4 .u-text-1 {
-    margin-right: 0;
-    margin-left: 727px;
-  }
-
-  .u-section-4 .u-layout-wrap-1 {
-    width: 940px;
+  .u-section-4 .u-text-2 {
+    margin-top: 20px;
   }
 
   .u-section-4 .u-layout-cell-1 {
-    min-height: 384px;
+    min-height: 769px;
   }
 
-  .u-section-4 .u-text-6 {
-    width: 163px;
-  }
-
-  .u-section-4 .u-line-1 {
-    width: 163px;
-  }
-
-  .u-section-4 .u-text-7 {
-    width: 163px;
-  }
-
-  .u-section-4 .u-layout-cell-2 {
-    min-height: 384px;
-  }
-
-  .u-section-4 .u-text-10 {
-    width: 163px;
-  }
-
-  .u-section-4 .u-line-2 {
-    width: 163px;
-  }
-
-  .u-section-4 .u-text-11 {
-    width: 163px;
-  }
-
-  .u-section-4 .u-layout-cell-3 {
-    min-height: 993px;
-  }
-
-  .u-section-4 .u-text-12 {
-    width: auto;
-    margin-top: 30px;
-  }
-
-  .u-section-4 .u-text-13 {
-    width: auto;
-    margin-top: 5px;
-  }
-
-  .u-section-4 .u-text-14 {
-    width: auto;
-  }
-
-  .u-section-4 .u-line-3 {
-    width: 223px;
-    margin-top: 17px;
-  }
-
-  .u-section-4 .u-text-15 {
-    width: 163px;
-  }
-
-  .u-section-4 .u-btn-3 {
-    margin-right: auto;
-  }
-
-  .u-section-4 .u-layout-cell-4 {
-    min-height: 993px;
-  }
-
-  .u-section-4 .u-container-layout-4 {
-    padding-left: 24px;
-    padding-right: 24px;
-  }
-
-  .u-section-4 .u-text-17 {
-    width: auto;
-    margin-left: 0;
+  .u-section-4 .u-text-3 {
     margin-right: 0;
   }
 
-  .u-section-4 .u-text-18 {
-    width: 163px;
-  }
-
-  .u-section-4 .u-line-4 {
-    width: 163px;
-  }
-
-  .u-section-4 .u-text-19 {
-    width: 163px;
+  .u-section-4 .u-layout-cell-2 {
+    min-height: 736px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 323px;
+    min-height: 344px;
   }
 
   .u-section-4 .u-text-1 {
-    margin-left: 507px;
-  }
-
-  .u-section-4 .u-text-2 {
-    width: 720px;
-  }
-
-  .u-section-4 .u-layout-wrap-1 {
     width: 720px;
   }
 
   .u-section-4 .u-layout-cell-1 {
-    min-height: 959px;
-  }
-
-  .u-section-4 .u-container-layout-1 {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  .u-section-4 .u-line-1 {
-    transform-origin: right center 0px;
-  }
-
-  .u-section-4 .u-text-7 {
-    width: auto;
-    margin-right: 0;
-    margin-left: 5px;
+    min-height: 100px;
   }
 
   .u-section-4 .u-layout-cell-2 {
-    min-height: 959px;
-  }
-
-  .u-section-4 .u-container-layout-2 {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  .u-section-4 .u-line-2 {
-    transform-origin: left center 0px;
-    margin-top: 23px;
-  }
-
-  .u-section-4 .u-text-11 {
-    width: auto;
-    margin-top: 17px;
-    margin-left: 2px;
-    margin-right: 2px;
-  }
-
-  .u-section-4 .u-layout-cell-3 {
-    min-height: 959px;
-  }
-
-  .u-section-4 .u-text-12 {
-    margin-top: 29px;
-    margin-left: 13px;
-    margin-right: 13px;
-  }
-
-  .u-section-4 .u-text-13 {
-    margin-left: 13px;
-    margin-right: 13px;
-  }
-
-  .u-section-4 .u-text-14 {
-    margin-top: -2px;
-  }
-
-  .u-section-4 .u-line-3 {
-    transform-origin: right center 0px;
-    margin-top: 26px;
-    margin-right: -55px;
-  }
-
-  .u-section-4 .u-text-15 {
-    margin-top: 12px;
-  }
-
-  .u-section-4 .u-layout-cell-4 {
-    min-height: 959px;
-  }
-
-  .u-section-4 .u-container-layout-4 {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  .u-section-4 .u-text-17 {
-    margin-top: 5px;
-    margin-right: -8px;
-    margin-left: auto;
-  }
-
-  .u-section-4 .u-text-18 {
-    margin-top: -1px;
-  }
-
-  .u-section-4 .u-line-4 {
-    transform-origin: left center 0px;
-    margin-top: 31px;
-  }
-
-  .u-section-4 .u-text-19 {
-    margin-top: 9px;
+    min-height: 100px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 523px;
+    min-height: 444px;
   }
 
   .u-section-4 .u-text-1 {
-    margin-left: 327px;
-  }
-
-  .u-section-4 .u-text-2 {
     width: 540px;
   }
 
-  .u-section-4 .u-layout-wrap-1 {
-    width: 540px;
+  .u-section-4 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
-  .u-section-4 .u-layout-cell-1 {
-    min-height: 100px;
-  }
-
-  .u-section-4 .u-layout-cell-2 {
-    min-height: 100px;
-  }
-
-  .u-section-4 .u-layout-cell-3 {
-    min-height: 100px;
-  }
-
-  .u-section-4 .u-layout-cell-4 {
-    min-height: 100px;
+  .u-section-4 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-4 .u-text-1 {
-    margin-left: 127px;
-  }
-
-  .u-section-4 .u-text-2 {
     width: 340px;
   }
 
-  .u-section-4 .u-layout-wrap-1 {
-    width: 340px;
-  }
-
-  .u-section-4 .u-layout-cell-1 {
-    min-height: 671px;
-  }
-
-  .u-section-4 .u-line-1 {
-    transform-origin: left center 0px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-4 .u-text-7 {
-    margin-left: 0;
+  .u-section-4 .u-text-4 {
+    font-size: 3rem;
   }
 
   .u-section-4 .u-layout-cell-2 {
-    min-height: 671px;
+    min-height: 831px;
   }
 
-  .u-section-4 .u-line-2 {
-    width: 342px;
-    margin-left: -1px;
-    margin-right: -1px;
-  }
-
-  .u-section-4 .u-text-11 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-4 .u-layout-cell-3 {
-    min-height: 667px;
-  }
-
-  .u-section-4 .u-text-12 {
-    margin-top: 28px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .u-section-4 .u-text-13 {
-    margin-top: 4px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .u-section-4 .u-text-14 {
-    margin-top: 0;
-  }
-
-  .u-section-4 .u-line-3 {
-    width: 395px;
-  }
-
-  .u-section-4 .u-text-15 {
+  .u-section-4 .u-text-7 {
+    font-size: 3rem;
     width: auto;
-    margin-top: 23px;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-4 .u-btn-3 {
-    margin-top: 21px;
-  }
-
-  .u-section-4 .u-layout-cell-4 {
-    min-height: 671px;
-  }
-
-  .u-section-4 .u-text-17 {
-    margin-top: 4px;
-    margin-right: auto;
-  }
-
-  .u-section-4 .u-text-18 {
-    margin-top: 0;
-  }
-
-  .u-section-4 .u-line-4 {
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-4 .u-text-19 {
-    width: auto;
-    margin-top: 25px;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-4 .u-btn-4 {
-    margin-top: 16px;
   }
 }.u-section-5 .u-sheet-1 {
   min-height: 799px;
@@ -1726,17 +1319,15 @@
     min-height: 1021px;
   }
 
-  .u-section-6 .u-layout-cell-1 {
-    min-height: 923px;
+  .u-section-6 .u-text-2 {
+    margin-top: 20px;
   }
 
-  .u-section-6 .u-container-layout-1 {
-    padding-top: 20px;
-    padding-bottom: 20px;
+  .u-section-6 .u-layout-cell-1 {
+    min-height: 699px;
   }
 
   .u-section-6 .u-text-3 {
-    margin-top: 10px;
     margin-left: 0;
     margin-right: 0;
   }
@@ -1747,34 +1338,12 @@
   }
 
   .u-section-6 .u-text-5 {
-    width: 193px;
     margin-left: 0;
     margin-right: 0;
-  }
-
-  .u-section-6 .u-btn-1 {
-    margin-top: 42px;
-    margin-bottom: -10px;
   }
 
   .u-section-6 .u-layout-cell-2 {
-    min-height: 923px;
-  }
-
-  .u-section-6 .u-container-layout-2 {
-    padding-top: 11px;
-    padding-bottom: 11px;
-  }
-
-  .u-section-6 .u-text-6 {
-    width: auto;
-    margin-top: 20px;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-6 .u-text-7 {
-    margin-top: 9px;
+    min-height: 736px;
   }
 
   .u-section-6 .u-line-2 {
@@ -1785,77 +1354,35 @@
     width: 193px;
   }
 
-  .u-section-6 .u-btn-2 {
-    margin-top: 41px;
-    margin-left: 14px;
-  }
-
   .u-section-6 .u-layout-cell-3 {
-    min-height: 923px;
-  }
-
-  .u-section-6 .u-container-layout-3 {
-    padding-top: 6px;
-    padding-bottom: 6px;
+    min-height: 736px;
   }
 
   .u-section-6 .u-text-9 {
-    width: auto;
-    margin-top: 24px;
     margin-left: 0;
     margin-right: 0;
-  }
-
-  .u-section-6 .u-text-10 {
-    width: auto;
-    margin-top: 8px;
   }
 
   .u-section-6 .u-line-3 {
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    width: 193px;
   }
 
   .u-section-6 .u-text-11 {
-    width: auto;
-    margin-top: 14px;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-6 .u-btn-3 {
-    margin-top: 40px;
-    margin-right: 12px;
+    width: 193px;
   }
 
   .u-section-6 .u-layout-cell-4 {
-    min-height: 923px;
-  }
-
-  .u-section-6 .u-container-layout-4 {
-    padding-top: 6px;
-    padding-bottom: 6px;
+    min-height: 736px;
   }
 
   .u-section-6 .u-line-4 {
     width: 209px;
   }
-
-  .u-section-6 .u-text-14 {
-    width: auto;
-    margin-left: 8px;
-    margin-right: 8px;
-  }
-
-  .u-section-6 .u-btn-4 {
-    margin-top: 35px;
-  }
 }
 
 @media (max-width: 991px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 1674px;
+    min-height: 385px;
   }
 
   .u-section-6 .u-text-1 {
@@ -1863,112 +1390,34 @@
   }
 
   .u-section-6 .u-layout-cell-1 {
-    min-height: 669px;
-  }
-
-  .u-section-6 .u-container-layout-1 {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  .u-section-6 .u-text-3 {
-    margin-left: 15px;
-    margin-right: 15px;
-  }
-
-  .u-section-6 .u-line-1 {
-    transform-origin: right center 0px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-6 .u-text-5 {
-    width: auto;
-    margin-top: 15px;
-    margin-right: 13px;
-    margin-left: 17px;
-  }
-
-  .u-section-6 .u-btn-1 {
-    margin-top: 26px;
-    margin-right: 93px;
+    min-height: 100px;
   }
 
   .u-section-6 .u-layout-cell-2 {
-    min-height: 669px;
-  }
-
-  .u-section-6 .u-text-6 {
-    margin-top: 17px;
-  }
-
-  .u-section-6 .u-text-7 {
-    width: auto;
-    margin-top: 10px;
-  }
-
-  .u-section-6 .u-line-2 {
-    margin-top: 14px;
-    transform-origin: left center 0px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-6 .u-text-8 {
-    width: auto;
-    margin-top: 15px;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-6 .u-btn-2 {
-    margin-top: 26px;
+    min-height: 100px;
   }
 
   .u-section-6 .u-layout-cell-3 {
-    min-height: 672px;
-  }
-
-  .u-section-6 .u-container-layout-3 {
-    padding-bottom: 21px;
+    min-height: 100px;
   }
 
   .u-section-6 .u-layout-cell-4 {
-    min-height: 672px;
-  }
-
-  .u-section-6 .u-container-layout-4 {
-    padding-bottom: 24px;
-  }
-
-  .u-section-6 .u-line-4 {
-    width: 330px;
-    transform-origin: left center 0px;
-    margin-right: 0;
-  }
-
-  .u-section-6 .u-text-15 {
-    margin-top: 118px;
+    min-height: 100px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 527px;
+    min-height: 585px;
   }
 
   .u-section-6 .u-text-1 {
     width: 540px;
   }
 
-  .u-section-6 .u-layout-cell-1 {
-    min-height: 100px;
-  }
-
-  .u-section-6 .u-layout-cell-2 {
-    min-height: 100px;
+  .u-section-6 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
   .u-section-6 .u-container-layout-2 {
@@ -1976,83 +1425,42 @@
     padding-right: 10px;
   }
 
-  .u-section-6 .u-layout-cell-3 {
-    min-height: 100px;
-  }
-
   .u-section-6 .u-container-layout-3 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
   .u-section-6 .u-layout-cell-4 {
-    min-height: 645px;
+    min-height: 842px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-6 .u-sheet-1 {
-    min-height: 2922px;
-  }
-
   .u-section-6 .u-text-1 {
-    width: auto;
-    margin-top: 0;
-    margin-left: 0;
-    margin-right: 0;
+    width: 340px;
   }
 
-  .u-section-6 .u-text-2 {
-    width: auto;
-    margin-top: -54px;
+  .u-section-6 .u-text-4 {
+    font-size: 2.25rem;
   }
 
-  .u-section-6 .u-layout-wrap-1 {
-    margin-top: 46px;
-  }
-
-  .u-section-6 .u-layout-cell-1 {
-    min-height: 638px;
-  }
-
-  .u-section-6 .u-text-3 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-6 .u-text-5 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-6 .u-btn-1 {
-    margin-top: 19px;
+  .u-section-6 .u-line-1 {
     margin-right: auto;
   }
 
-  .u-section-6 .u-btn-2 {
-    margin-left: 0;
+  .u-section-6 .u-text-7 {
+    font-size: 2.25rem;
   }
 
-  .u-section-6 .u-layout-cell-3 {
-    min-height: 674px;
-  }
-
-  .u-section-6 .u-btn-3 {
-    margin-top: 25px;
-    margin-right: 71px;
+  .u-section-6 .u-text-10 {
+    font-size: 2.25rem;
   }
 
   .u-section-6 .u-layout-cell-4 {
-    min-height: 662px;
+    min-height: 802px;
   }
 
-  .u-section-6 .u-line-4 {
-    width: 326px;
-  }
-
-  .u-section-6 .u-text-14 {
-    margin-left: 0;
-    margin-right: 0;
+  .u-section-6 .u-text-13 {
+    font-size: 2.25rem;
   }
 }
